--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A Crawler service for collect all mobile phone's price from some popular online stores ( Thegioididong, Tiki, VienthongA, FptShop ...)
 
-Things you may want to cover:
+JSON API Server for ReactNative App
 
-* Ruby version
+Technical:
 
-* System dependencies
+- Ruby On Rails
 
-* Configuration
+- Selenium web driver for web crawler
 
-* Database creation
+- Postgresql
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- JSON API
